gitops-apps/glance/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance

spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:latest
          args: ["--config", "/etc/glance/config/glance.yml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/glance/config
      volumes:
        - name: config
          configMap:
            name: glance-config
