gitops-apps/glance/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  
spec:
  selector:
    app: glance
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
